tests/invalid/class_body_expr_constant_not_allowed/main.py
class BadClassBodyConstant:
    1


def run_case() -> None:
    print("unreachable")


if __name__ == "__main__":
    run_case()
